Fix fallback bug, add alpn to settings

--- a/web/html/xui/common_sider.html
+++ b/web/html/xui/common_sider.html
@@ -24,15 +24,15 @@
         <a-icon type="home"></a-icon>
         <span>博客主页</span>
     </a-menu-item>
-    <a-menu-item key="https://github.com/Misaka-blog/x-ui-msk">
-        <a-icon type="github"></a-icon>
-        <span>GitHub 项目</span>
+    <a-menu-item key="https://gitlab.com/Misaka-blog/x-ui-msk">
+        <a-icon type="gitlab"></a-icon>
+        <span>GitLab 项目</span>
     </a-menu-item>   
-    <a-menu-item key="https://t.me/misakablogchannel">
+    <a-menu-item key="https://t.me/misakanocchannel">
         <a-icon type="notification"></a-icon>
         <span>Telegram 频道</span>
     </a-menu-item>
-    <a-menu-item key="https://t.me/misakanoxpz">
+    <a-menu-item key="https://t.me/misakanoc">
         <a-icon type="team"></a-icon>
         <span>Telegram 群组</span>
     </a-menu-item>
