--- a/web/html/xui/form/tls_settings.html
+++ b/web/html/xui/form/tls_settings.html
@@ -5,11 +5,13 @@
         <a-switch v-model="inbound.tls">
         </a-switch>
     </a-form-item>
+    <a-form-item v-if="inbound.canEnableReality()" label="reality">
+        <a-switch v-model="inbound.xtls"></a-switch>
+    </a-form-item>
 </a-form>
 
 <!-- tls settings -->
-<a-form v-if="inbound.tls || inbound.xtls"
-        layout="inline">
+<a-form v-if="inbound.tls || inbound.xtls" layout="inline">
     <a-form-item label="域名">
         <a-input v-model.trim="inbound.stream.tls.server"></a-input>
     </a-form-item>
@@ -42,6 +44,38 @@
         </a-form-item>
     </template>
 </a-form>
+
+<!-- reality settings -->
+<a-form v-if="inbound.reality" layout="inline">
+    <a-form-item label="show">
+        <a-input v-model.trim="inbound.stream.tls.server"></a-input>
+    </a-form-item>
+    <a-form-item label="dest">
+        <a-input v-model.trim="inbound.stream.tls.alpn"></a-input>
+    </a-form-item>
+    <a-form-item label="xver">
+        <a-input v-model.trim="inbound.stream.tls.alpn"></a-input>
+    </a-form-item>
+    <a-form-item label="serverNames">
+        <a-input v-model.trim="inbound.stream.tls.alpn"></a-input>
+    </a-form-item>
+    <a-form-item label="privateKey">
+        <a-input v-model.trim="inbound.stream.tls.alpn"></a-input>
+    </a-form-item>
+    <a-form-item label="minClientVer">
+        <a-input v-model.trim="inbound.stream.tls.alpn"></a-input>
+    </a-form-item>
+    <a-form-item label="maxClientVer">
+        <a-input v-model.trim="inbound.stream.tls.alpn"></a-input>
+    </a-form-item>
+    <a-form-item label="maxTimeDiff">
+        <a-input v-model.trim="inbound.stream.tls.alpn"></a-input>
+    </a-form-item>
+    <a-form-item label="shortIds">
+        <a-input v-model.trim="inbound.stream.tls.alpn"></a-input>
+    </a-form-item>
+</a-form>
+
 <a-form layout="inline" v-else-if = "inbound.stream.network === 'tcp' ">
     <a-form-item label="tcp-acceptProxyProtocol">
         <a-switch v-model="inbound.stream.tcp.acceptProxyProtocol"></a-switch>
