--- a/web/html/xui/common_sider.html
+++ b/web/html/xui/common_sider.html
@@ -20,22 +20,11 @@
         <a-icon type="link"></a-icon>
         <span>相关说明</span>
     </template>
-    <a-menu-item key="https://blog.misaka.rest">
-        <a-icon type="home"></a-icon>
-        <span>博客主页</span>
+    <a-menu-item key="https://github.com/qist/x-ui/blob/main/README.md">
+        <a-icon type="github"></a-icon>
+        <span>教程</span>
     </a-menu-item>
-    <a-menu-item key="https://gitlab.com/Misaka-blog/x-ui-msk">
-        <a-icon type="gitlab"></a-icon>
-        <span>GitLab 项目</span>
-    </a-menu-item>   
-    <a-menu-item key="https://t.me/misakanocchannel">
-        <a-icon type="notification"></a-icon>
-        <span>Telegram 频道</span>
-    </a-menu-item>
-    <a-menu-item key="https://t.me/misakanoc">
-        <a-icon type="team"></a-icon>
-        <span>Telegram 群组</span>
-    </a-menu-item>
+    
 </a-sub-menu>
 <a-menu-item key="{{ .base_path }}logout">
     <a-icon type="logout"></a-icon>
