--- a/web/html/xui/form/protocol/vless.html
+++ b/web/html/xui/form/protocol/vless.html
@@ -3,10 +3,17 @@
     <a-form-item label="id">
         <a-input v-model.trim="inbound.settings.vlesses[0].id"></a-input>
     </a-form-item>
-    <a-form-item v-if="inbound.xtls" label="flow">
+
+    <a-form-item v-if="inbound.tls && inbound.isTcp" label="flow">
+        <a-select v-model="inbound.settings.vlesses[0].flow" style="width: 180px">
+            <a-select-option value="">无</a-select-option>
+            <a-select-option v-for="key in FLOW_VISION" :value="key">[[ key ]]</a-select-option>
+        </a-select>
+    </a-form-item>
+    <a-form-item v-if="inbound.reality" label="flow">
         <a-select v-model="inbound.settings.vlesses[0].flow" style="width: 150px">
             <a-select-option value="">无</a-select-option>
-            <a-select-option v-for="key in FLOW_CONTROL" :value="key">[[ key ]]</a-select-option>
+            <a-select-option v-for="key in FLOW_VISION" :value="key">[[ key ]]</a-select-option>
         </a-select>
     </a-form-item>
 </a-form>
