--- a/web/html/xui/form/reality_settings.html
+++ b/web/html/xui/form/reality_settings.html
@@ -19,7 +19,7 @@
         </a-select>
     </a-form-item>
     <a-form-item label="dest">
-        <a-input v-model.trim="inbound.stream.reality.dest"  style="width: 165px"></a-input>
+        <a-input v-model.trim="inbound.stream.reality.dest" style="width: 165px"></a-input>
     </a-form-item>
     <a-form-item label="xver">
         <a-input v-model.number="inbound.stream.reality.xver"></a-input>
@@ -27,8 +27,8 @@
     <a-form-item label="serverNames">
         <a-input type="textarea" :rows="2" v-model="inbound.stream.reality.serverNames"  style="width: 165px"></a-input>
     </a-form-item>
-    <a-form-item label="privateKey">
-        <a-input v-model.trim="inbound.stream.reality.privateKey"  style="width: 350px"></a-input>
+    <a-form-item label="私钥">
+        <a-input v-model.trim="inbound.stream.reality.privateKey" style="width: 350px"></a-input>
     </a-form-item>
     <a-form-item label="minClientVer">
         <a-input v-model.trim="inbound.stream.reality.minClientVer"></a-input>
@@ -40,7 +40,7 @@
         <a-input v-model.number="inbound.stream.reality.maxTimeDiff"></a-input>
     </a-form-item>
     <a-form-item label="shortIds">
-        <a-input type="textarea" :rows="2" v-model="inbound.stream.reality.shortIds"  style="width: 165px"></a-input>
+        <a-input type="textarea" :rows="2" v-model="inbound.stream.reality.shortIds" style="width: 165px"></a-input>
     </a-form-item>
 </a-form>
 {{end}}
